feat: add rabitmq and example
